# PyPasta

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
examples/: input.toml  scan.csv
src/pypasta/: HaltonGenerator.py  LinSpace.py  ParamDict.py  StaticGenerator.py  __init__.py  __main__.py  cli.py  read_input.py  utils.py
tests/: test_ParamDict.py  test__process_scan_set.py
